--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,20 @@
 *{
   margin:0;
   padding:0;
+
 }
 
 main {
   position: relative;
+  width: 100%;
+  height: 100vh;
 
 
+}
+
+section {
+  width:100%;
+  height: 100vh;
 }
 
 article{
@@ -25,6 +33,10 @@ header {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  color: white
 }
 
 nav ul {
@@ -46,13 +58,30 @@ justify-content: space-evenly;
 .hero article{
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+  background-color: transparent;
+  gap: 200px;
+
+
+}
+
+.hero article h1 {
+  font-size: 3rem;
+  color: #F8EAD8;
+  background-color: transparent;
+}
+
+.hero{
+  background-image: url('./assets/ringHand2.jpeg') ;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 
 }
 
 .hero, .design, .about{
-  height: 720px;
+
   border: 1px solid black;
   display: flex;
 
