--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ main {
 
 }
 
-.hero , .design{
+.hero , .design, .about{
   width:100%;
   height: 100vh;
 }
@@ -40,7 +40,7 @@ header {
   color: #F8EAD8;
   gap: 80px;
   height: 2rem;
-  background-color: #A7727D;
+  background-color: black;
   opacity: 80%;
 }
 
@@ -93,14 +93,14 @@ justify-content: space-evenly;
 
 
 .design{
-  background-color: #F8EAD8;
+  background-color: #f8f4f0
+
+
+
 }
 .design .container{
   display: flex;
   flex-direction: column;
-  width:100%;
-  background-color: #F8EAD8;
-
 
 }
 
@@ -115,49 +115,60 @@ video{
 
 
 .info {
-  height: 200px;
   display: flex;
   flex-direction: column;
-
+  justify-content: center;
 
 
 }
 
 .info .header {
-
-  margin: 5%;
+  margin: 3% 4% ;
   /* padding: 5%; */
   display: flex;
   flex-direction: row;
-  height: 50%;
-  gap: 100px;
-  justify-content: center;
+  justify-content: space-evenly;
 
 }
 
-.info .header > h1 {
-  font-size: x-large;
+.info .header > h3 {
+  font-size: 2rem;
 }
 
 .info .header > p {
   align-self: flex-end;
+  width: 50%;
 }
 
 
 .info .cards {
   display: flex;
   flex-direction: row;
-  background-color: #F8EAD8;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  background-color: #f8f4f0;
+  gap: 20px;
+  margin-right: 4%;
+  margin-left: 4%;
+  padding-bottom: 10px;
+
+
 }
 
 .info .card {
   border: solid 1px grey;
   height: 6rem;
-  width: 12rem;
+  width: 15rem;
+  padding: 1%;
 }
 
 .info .card > h6{
   font-size: large;
   font-weight: lighter;
+  margin-bottom: 5%;
 }
+
+.info .card > p {
+  margin-bottom: 10%;
+}
+
+
