--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ main {
 
 }
 
-.hero , .design, .about{
+.hero , .design, .about, .contact{
   width:100%;
   height: 100vh;
 }
@@ -25,7 +25,7 @@ article{
 
 
 .logo{
-  max-width: 11rem;
+  max-width: 10rem;
   justify-self: flex-start;
   margin-left: 5%;
 }
@@ -156,7 +156,6 @@ video{
 .info .cards {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
   background-color: #f8f4f0;
   gap: 20px;
   margin-right: 4%;
@@ -249,6 +248,7 @@ margin-bottom: 5px;;
   height: 100px;
   width: 50px;;
   text-align: center;
+  ;
 }
 
 .bi{
@@ -256,5 +256,32 @@ margin-bottom: 5px;;
 }
 
 
+.contact{
+  display: flex;
+  justify-content: center;
+}
+
+.contact.info{
+  min-width: 50%;
+}
+
+.contactImage {
+width: 100%;
+ height: 100vh;;
+}
+
+.contactSection{
+ width: 1000px;
+ height: 100vh;
+
+}
+
+footer{
+
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  background-color: aqua;
+}
 
 
