--- a/styles.css
+++ b/styles.css
@@ -259,29 +259,56 @@ margin-bottom: 5px;;
 .contact{
   display: flex;
   justify-content: center;
+  color: rgb(73, 78, 81);
 }
 
-.contact.info{
-  min-width: 50%;
+
+.contactInfo{
+  width: 50%;
+}
+
+.infoText{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin-left: 5%;
+}
+
+.infoText > h1{
+  font-size: 5rem;
+  font-weight: lighter;
 }
 
 .contactImage {
-width: 100%;
+ width: 100%;
  height: 100vh;;
 }
 
 .contactSection{
- width: 1000px;
+ width: 50%;
  height: 100vh;
 
 }
 
-footer{
+.btn{
+  height: 3rem;
+  margin-top: 3%;
+  background-color: whitesmoke;
+  border-radius: 20px;;
+}
 
+.btn:nth-of-type(1){
+  margin-top: 7%;
+}
+footer{
+  display: flex;
+  flex-direction: column;
   bottom: 0;
   width: 100%;
   height: 2.5rem;
-  background-color: aqua;
+  background-color: black;
+  color: whitesmoke;
+  text-align: center;
 }
 
 
